--- a/perfilroberio.html
+++ b/perfilroberio.html
@@ -7,6 +7,16 @@
     <title>Portifólio do Robério</title>
 </head>
     <body>
-        <h1>titulo</h1>
+        <h1>Portifólio</h1>
+        <h2>Robério</h2>
+        <img src="Imagens/WhatsApp Image 2023-03-08 at 16.20.52.jpeg" alt="foto do Robério">
+        <p>Eu sou Robério Guilherme, curso ciências da computaçâo na Universidade Estadual do Piauí, tenho conhecimentos em limguagem C orientado a objeto, java orientado a objeto, Ruby on rains.</p>
+        <p>Estou aprendendo HTML e CSS, e este projeto irá me ajuadr no meu progresso.</p> 
+        <p>Redes Sociais:</p>
+        <p><a href="https://github.com/roberio3620" target="_blank" rel="externa" > GitHub </a> </p> 
+        <p><a href="https://www.linkedin.com/in/rob%C3%A9rio-guilherme-58a464249/" target="_blank" rel="externa">Linkedin</a></p>
+        <p></p>
+        <p>Estou desenvolvendo esse projeto com o meu socio Vitor Jarrel.</p>
+        <p><a href="/index.html" target="_blank" rel="externa"> portifolio do vitor</a> </p>
     </body>
 </html>
