--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Vitor Jarrel</title>
+    <style>
+    body{
+        background-color: rgb(159, 159, 209);
+    }</style>
 </head>
 <body>
     <h1>Meu Portifólio</h1>
-    <img src="Imagens/WhatsApp Image 2023-03-08 at 16.18.33.jpeg" alt="Imagem de Vitor">
-    <h2><b>Meu nome é Vitor Jarrel e pretendo ser um desenvolvedor web. Acredito que com esses pequenos trabalhos, a caminhada para chegar ao sucesso vai se tornar cada vez melhor e mais divertida.</b>
-        <p>Aqui estão o acesso as minhas redes:</p>
-        <p><a href="https://github.com/vjarrel" target="_blank" rel="externa">Github</a></p>
-        <p><a href="https://www.linkedin.com/in/vjarrel/" target="_blank" rel="externa">Linkedin</a></p>
-    </h2>
-    <h3>Estou estudando com meu amigo Robério, se quiser dar uma olhada no Portifólio dele, <a href="perfilroberio.html" target="_blank" rel="externa">Clique Aqui</a></h3>
+    <img src="Imagens/imagem grande.png" alt="Imagem de Vitor">
+    <h4><b>Meu nome é Vitor Jarrel e pretendo ser um desenvolvedor web. Acredito que com esses pequenos trabalhos, a caminhada para chegar ao sucesso vai se tornar cada vez melhor e mais divertida.</b>
+    </h4>
+    <p>Aqui estão o acesso as minhas redes:
+        <ul>
+            <li><a href="https://github.com/vjarrel" target="_blank" rel="externa">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/vjarrel/" target="_blank" rel="externa">Linkedin</a></li>
+        </ul>
+    </p>
+    <p>Estou estudando com meu amigo Robério, se quiser dar uma olhada no Portifólio dele, <a href="perfilroberio.html">clique aqui.</a></p>
 </body>
 </html>
