pequeno css interno

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <style>
     body{
         background-color: rgb(159, 159, 209);
-    }</style>
+    }
+    h1{
+        color: aqua;
+        background-color: black;
+    }
+    </style>
 </head>
 <body>
     <h1>Meu Portifólio</h1>
