--- a/perfilroberio.html
+++ b/perfilroberio.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio do Robério</title>
+    <title>Portifolio</title>
+    <link rel="stylesheet" href="./estilos/robestilo.css">
 </head>
-    <body>
-        <h1>Portifólio</h1>
-        <h2>Robério</h2>
-        <img src="Imagens/WhatsApp Image 2023-03-08 at 16.20.52.jpeg" alt="foto do Robério">
-        <p>Eu sou Robério Guilherme, curso ciências da computaçâo na Universidade Estadual do Piauí, tenho conhecimentos em limguagem C orientado a objeto, java orientado a objeto, Ruby on rains.</p>
-        <p>Estou aprendendo HTML e CSS, e este projeto irá me ajuadr no meu progresso.</p> 
-        <p>Redes Sociais:</p>
-         <ul>
-            <li><a href="https://github.com/roberio3620" target="_blank" rel="externa" > GitHub </a> </li> 
-            <li><a href="https://www.linkedin.com/in/rob%C3%A9rio-guilherme-58a464249/" target="_blank" rel="externa">Linkedin</a></li>
-         </ul>
-        <p></p>
-        <p>Estou desenvolvendo esse projeto com o meu socio Vitor Jarrel.</p>
-        <ul><li><a href="/index.html" target="_blank" rel="externa"> portifolio do vitor</a></li></ul>
-    </body>
-</html>
+
+<body>
+    <header></header>      
+    <main class="apres">
+        <section class="apres__cont">
+            <h1 class="apres__cont__tit">Eleve seu negócio a outro a outro nìvel <strong class="titulo-destaque">um Front-end de qualidade!</strong></h1> 
+            <p class="apres__cont__text">Olá! Sou Robério Guilherme, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="apres__links">
+                <a class="apres__links__but" href="https://github.com/roberio3620">GitHub</a>
+                <a class="apres__links__but" href="https://www.linkedin.com/in/rob%C3%A9rio-guilherme-58a464249/">linkedin</a> 
+            </div>
+        </section>
+        <img src="./Imagens/ftrob2.png" alt="foto robério">       
+        </main>
+        <footer class="rodape">
+            <p>Desenvolvido por Robério</p>
+        </footer>
+</body>
