--- a/perfilroberio.html
+++ b/perfilroberio.html
@@ -17,6 +17,7 @@
             <div class="apres__links">
                 <a class="apres__links__but" href="https://github.com/roberio3620">GitHub</a>
                 <a class="apres__links__but" href="https://www.linkedin.com/in/rob%C3%A9rio-guilherme-58a464249/">linkedin</a> 
+                <a  class="apres__links__but" href="/index.html" target="_blank" rel="externa"> portifolio do vitor</a>
             </div>
         </section>
         <img src="./Imagens/ftrob2.png" alt="foto robério">       
